--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^2.10.9",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@react-router/node": "^7.7.1",
-    "framer-motion": "^12.23.12",
-    "isbot": "^5.1.27",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^7.7.1"
+    "@chakra-ui/icons": "2.2.4",
+    "@chakra-ui/react": "2.10.9",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.1",
+    "@react-router/node": "7.8.1",
+    "framer-motion": "12.23.12",
+    "isbot": "5.1.27",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router": "7.8.1"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.7.1",
+    "@react-router/dev": "7.8.1",
     "@tailwindcss/vite": "^4.1.4",
-    "@types/node": "^20",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vercel/react-router": "^1.2.2",
+    "@types/node": "20.17.12",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "@vercel/react-router": "1.2.2",
     "tailwindcss": "^4.1.4",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.3",
+    "typescript": "5.6.3",
+    "vite": "6.3.3",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
