--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-router/node": "7.8.1",
     "framer-motion": "12.23.12",
     "isbot": "5.1.27",
+    "lucide-react": "^0.542.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router": "7.8.1"
