--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "lucide-react": "^0.542.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router": "7.8.1"
+    "react-icons": "^5.5.0",
+    "react-router": "7.8.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@react-router/dev": "7.8.1",
@@ -27,6 +29,7 @@
     "@types/node": "20.17.12",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
+    "@types/react-slick": "^0.23.13",
     "@vercel/react-router": "1.2.2",
     "tailwindcss": "^4.1.4",
     "typescript": "5.6.3",
