--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "typecheck": "react-router typegen && tsc",
+    "optimize-images": "node scripts/optimize-used-images.js"
   },
   "dependencies": {
     "@chakra-ui/icons": "2.2.4",
@@ -30,6 +31,7 @@
     "@types/react-dom": "18.3.1",
     "@types/react-slick": "^0.23.13",
     "@vercel/react-router": "1.2.2",
+    "sharp": "^0.34.3",
     "typescript": "5.6.3",
     "vite": "6.3.3",
     "vite-tsconfig-paths": "^5.1.4"
