--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@emotion/server": "^11.11.0",
     "@react-router/dev": "7.8.1",
     "@types/node": "20.17.12",
     "@types/react": "18.3.12",
