--- a/package.json
+++ b/package.json
@@ -10,28 +10,21 @@
     "optimize-images": "node scripts/optimize-used-images.js"
   },
   "dependencies": {
-    "@chakra-ui/icons": "2.2.4",
-    "@chakra-ui/react": "2.10.9",
-    "@emotion/react": "11.14.0",
-    "@emotion/styled": "11.14.1",
     "@react-router/node": "7.8.1",
-    "framer-motion": "12.23.12",
     "isbot": "5.1.27",
     "lucide-react": "^0.542.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
-    "react-router": "7.8.1",
-    "slick-carousel": "^1.8.1"
+    "react-router": "7.8.1"
   },
   "devDependencies": {
-    "@emotion/server": "^11.11.0",
     "@react-router/dev": "7.8.1",
     "@types/node": "20.17.12",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
-    "@types/react-slick": "^0.23.13",
     "@vercel/react-router": "1.2.2",
+    "postcss": "^8.5.6",
     "sharp": "^0.34.3",
     "typescript": "5.6.3",
     "vite": "6.3.3",
