--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/index.html"
+      "destination": "/index.html",
+      "has": [{ "type": "header", "key": "accept", "value": "text/html.*" }]
     }
   ]
 }
